manifests/api-gateway/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/component: gateway
    app.kubernetes.io/part-of: hr-core
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/component: gateway
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
